// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check at correctly loaded, and eats its own tail Load at 1`] = `"<span class="aiev3-tb at-block is-locked" data-line-start-position="0" data-type="at" data-is-locked="true">@Hello</span>"`;

exports[`Check at correctly loaded, and eats its own tail Load at 2`] = `
EditorV3AtBlock {
  "_defaultContentProps": {
    "allowMarkdown": false,
    "allowNewLine": false,
    "allowWindowView": false,
    "atListFunction": undefined,
    "decimalAlignPercent": 60,
    "markdownSettings": {
      "atEndTag": "@]",
      "atStartTag": "@[",
      "calcAndSeparator": "&&",
      "calcConditionSeparator": "||",
      "calcEndTag": "]!]",
      "calcNameEndTag": "::",
      "calcStartTag": "[![",
      "defaultStyle": "defaultStyle",
      "dropDownEndTag": ")¬)",
      "dropDownSelectedValueTag": "**",
      "dropDownStartTag": "(¬(",
      "dropDownValueSeparator": "||",
      "styleEndTag": ")~)",
      "styleNameEndTag": "::",
      "styleStartTag": "(~(",
    },
    "maxAtListLength": 10,
    "showMarkdown": false,
    "styles": undefined,
    "textAlignment": "left",
  },
  "atData": {},
  "atListFunction": [Function],
  "isActive": false,
  "isLocked": undefined,
  "isSelected": false,
  "label": undefined,
  "lineStartPosition": 0,
  "maxAtListLength": 10,
  "style": undefined,
  "text": "@Hello",
  "type": "at",
}
`;

exports[`Check at correctly loaded, and eats its own tail Load select 1`] = `"<span class="aiev3-tb select-block is-locked" data-line-start-position="0" data-type="select" data-is-locked="true" data-available-options="[{&quot;text&quot;:&quot;Hello&quot;,&quot;data&quot;:{&quot;noStyle&quot;:&quot;true&quot;}},{&quot;text&quot;:&quot;World&quot;,&quot;data&quot;:{&quot;style&quot;:&quot;shiny&quot;}}]"><span class="select-block-caret skip-read"></span>Hello</span>"`;

exports[`Check at correctly loaded, and eats its own tail Load span with style and space 1`] = `"<span class="aiev3-tb at-block editorv3style-shiny is-active show-dropdown" data-line-start-position="0" data-type="at" data-style-name="shiny" title="label">@Hello world</span>"`;

exports[`Check at correctly loaded, and eats its own tail Load span with style and space 2`] = `
EditorV3AtBlock {
  "_defaultContentProps": {
    "allowMarkdown": false,
    "allowNewLine": false,
    "allowWindowView": false,
    "atListFunction": undefined,
    "decimalAlignPercent": 60,
    "markdownSettings": {
      "atEndTag": "@]",
      "atStartTag": "@[",
      "calcAndSeparator": "&&",
      "calcConditionSeparator": "||",
      "calcEndTag": "]!]",
      "calcNameEndTag": "::",
      "calcStartTag": "[![",
      "defaultStyle": "defaultStyle",
      "dropDownEndTag": ")¬)",
      "dropDownSelectedValueTag": "**",
      "dropDownStartTag": "(¬(",
      "dropDownValueSeparator": "||",
      "styleEndTag": ")~)",
      "styleNameEndTag": "::",
      "styleStartTag": "(~(",
    },
    "maxAtListLength": 10,
    "showMarkdown": false,
    "styles": undefined,
    "textAlignment": "left",
  },
  "atData": {},
  "atListFunction": [Function],
  "isActive": false,
  "isLocked": undefined,
  "isSelected": false,
  "label": "label",
  "lineStartPosition": 0,
  "maxAtListLength": 10,
  "style": "shiny",
  "text": "@Hello world",
  "type": "at",
}
`;

exports[`Check at correctly loaded, and eats its own tail Load with with spaces 1`] = `"<span class="aiev3-tb" data-line-start-position="0">&nbsp;</span><span class="aiev3-tb" data-line-start-position="0">&nbsp;</span><span class="aiev3-tb" data-line-start-position="0">Hello&nbsp;</span><span class="aiev3-tb" data-line-start-position="0">&nbsp;</span><span class="aiev3-tb" data-line-start-position="0">world&nbsp;</span><span class="aiev3-tb" data-line-start-position="0">&nbsp;</span>"`;

exports[`Check at correctly loaded, and eats its own tail Load word with style 1`] = `"<span class="aiev3-tb at-block editorv3style-shiny is-locked" data-line-start-position="0" data-type="at" data-style-name="shiny" title="label" data-is-locked="true">@Hello</span>"`;

exports[`Check at correctly loaded, and eats its own tail Load word with style 2`] = `
EditorV3AtBlock {
  "_defaultContentProps": {
    "allowMarkdown": false,
    "allowNewLine": false,
    "allowWindowView": false,
    "atListFunction": undefined,
    "decimalAlignPercent": 60,
    "markdownSettings": {
      "atEndTag": "@]",
      "atStartTag": "@[",
      "calcAndSeparator": "&&",
      "calcConditionSeparator": "||",
      "calcEndTag": "]!]",
      "calcNameEndTag": "::",
      "calcStartTag": "[![",
      "defaultStyle": "defaultStyle",
      "dropDownEndTag": ")¬)",
      "dropDownSelectedValueTag": "**",
      "dropDownStartTag": "(¬(",
      "dropDownValueSeparator": "||",
      "styleEndTag": ")~)",
      "styleNameEndTag": "::",
      "styleStartTag": "(~(",
    },
    "maxAtListLength": 10,
    "showMarkdown": false,
    "styles": undefined,
    "textAlignment": "left",
  },
  "atData": {},
  "atListFunction": [Function],
  "isActive": false,
  "isLocked": undefined,
  "isSelected": false,
  "label": "label",
  "lineStartPosition": 0,
  "maxAtListLength": 10,
  "style": "shiny",
  "text": "@Hello",
  "type": "at",
}
`;

exports[`Text block factory tests Load span with style, check it equals itself 1`] = `"<span class="aiev3-tb editorv3style-shiny" data-line-start-position="0" data-style-name="shiny">Hello&nbsp;</span><span class="aiev3-tb editorv3style-shiny" data-line-start-position="0" data-style-name="shiny">world</span>"`;

exports[`Text block factory tests Load string with style 1`] = `"<span class="aiev3-tb editorv3style-shiny" data-line-start-position="0" data-style-name="shiny">Hello&nbsp;</span><span class="aiev3-tb editorv3style-shiny" data-line-start-position="0" data-style-name="shiny">world&nbsp;</span>"`;
